# OOS

./: .gitignore  AGENTS.md  OOS_roadmap_8_weeks_checklist.md  Pain_Discovery_Layer_OOS_v3_spec_build_order.docx  README.md  opportunity_operating_system_v2_full.docx  pyproject.toml  requirements.txt  sample_signals_batch_01.json
.codex/: config.toml
config/: model_routing.json  source_registry.json
docs/: build-order.md  scope-v1.md  vision.md  weekly_cycle_v1.md
examples/: real_signal_batch.jsonl
scripts/: bootstrap.ps1  dev-git-check.ps1  dev-post-merge-sync.ps1  dev-pr-readiness.ps1  dev-snapshot.ps1  dev-test.ps1  dev-validate-final.ps1  dev.ps1  oos-status.ps1  oos-validate.ps1  oos-validation-report.ps1  process_signals.py  run-controlled-smoke.ps1  summarize_signals.py  verify.ps1
tests/: test_ai_contracts_prompt_versioning.py  test_ai_council_critique.py  test_ai_council_critique_acceptance.py  test_ai_ideation_evaluation.py  test_ai_ideation_flag.py  test_anti_pattern_checks.py  test_anti_pattern_checks_acceptance.py  test_artifact_store_roundtrip.py  test_autonomous_workflow_docs.py  test_candidate_signal_dedup.py  test_candidate_signal_extractor.py  test_cli.py  test_cluster_synthesis_contract.py  test_collection_scheduler_collector_interface.py  test_contradiction_detection.py  test_contradiction_detection_acceptance.py  test_controlled_weekly_run_smoke.py  test_correction_undo.py  test_council_layer.py  test_customer_voice_queries.py  test_customer_voice_query_planner_integration.py  test_decision_correction_rebuild.py  test_dev_ledger_structure.py  (+97 more)
(+410 files in other folders)
