[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oos"
version = "0.1.0"
description = "Opportunity Operating System (OOS) — v1 core (Week 1 foundation)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
oos = "oos.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

